--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -4,7 +4,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Gastebois Jacques - Ei2i\n",
+                "# Gastebois Jacques\n",
                 "## Visualisation des donnees synthetiques et des trajectoires\n",
                 "\n",
                 "Le ressenti est une valeur moins quantifiable mais primordiale. Ici, on va essayer de voir ce qu'on a reellement appris a la machine.\n",
